<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_bar"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/pad_20"
            android:src="@drawable/arrow_left" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/service"
            android:textColor="@color/white"
            android:textSize="@dimen/pad_18" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool"
        android:layout_marginRight="@dimen/pad_25"
        android:layout_marginTop="@dimen/pad_20"
        android:layout_marginBottom="@dimen/pad_16"
        android:layout_marginLeft="@dimen/pad_25">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/st_14_text_50"
            android:text="@string/type_repair"/>

        <TextView
            style="@style/st_14_text_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/count" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sum"
        android:layout_below="@+id/bar"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/pad_40" />

    <RelativeLayout
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/pad_25"
        android:layout_marginLeft="@dimen/pad_25"
        android:layout_marginTop="@dimen/pad_20"
        android:layout_above="@+id/request">

        <TextView
            style="@style/st_18_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/sum_all" />

        <TextView
            android:id="@+id/uah"
            style="@style/st_18_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:text="@string/uah" />


        <com.dpcsa.compon.custom_components.SimpleTextView
            android:id="@+id/amount"
            style="@style/st_18_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/uah"
            app:moneyFormat="###,###,##0"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/request"
        style="@style/st_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_button"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/pad_25"
        android:layout_marginRight="@dimen/pad_25"
        android:layout_marginTop="@dimen/pad_40"
        android:layout_marginBottom="@dimen/pad_40"
        android:background="@color/text"
        android:gravity="center"
        android:text="@string/leave_request" />
</RelativeLayout>