<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_bar"
        android:background="@color/primary">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/service"
            android:textColor="@color/white"
            android:textSize="@dimen/pad_18" />

        <LinearLayout
            android:id="@+id/sel_lang"
            android:layout_width="@dimen/pad_80"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="false"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lang_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/pad_14" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:layout_marginRight="@dimen/pad_14"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/pad_122"
        android:layout_below="@+id/tool"
        android:src="@drawable/repair_main" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/st_title"
        android:layout_below="@+id/img"
        android:layout_marginTop="@dimen/pad_28"
        android:layout_centerHorizontal="true"
        android:text="@string/repair_sites"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginTop="@dimen/pad_20"
        android:layout_marginLeft="@dimen/pad_48"
        android:layout_marginRight="@dimen/pad_40"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="@dimen/pad_5"
                android:layout_height="@dimen/pad_5"
                android:background="@drawable/shape_oval_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10"
                android:lineSpacingExtra="6sp"
                style="@style/st_14_text"
                android:text="@string/fast"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="@dimen/pad_5"
                android:layout_height="@dimen/pad_5"
                android:background="@drawable/shape_oval_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10"
                android:lineSpacingExtra="6sp"
                style="@style/st_14_text"
                android:text="@string/qualitatively"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="@dimen/pad_5"
                android:layout_height="@dimen/pad_5"
                android:background="@drawable/shape_oval_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10"
                android:lineSpacingExtra="6sp"
                style="@style/st_14_text"
                android:text="@string/convenient"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="@dimen/pad_5"
                android:layout_height="@dimen/pad_5"
                android:background="@drawable/shape_oval_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10"
                android:lineSpacingExtra="6sp"
                android:fontFamily="sans-serif-medium"
                style="@style/st_14_text"
                android:text="@string/free"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/apply"
        style="@style/st_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/pad_40"
        android:layout_marginLeft="@dimen/pad_25"
        android:layout_marginRight="@dimen/pad_25"
        android:layout_marginTop="@dimen/pad_4"
        android:background="@drawable/selector_button"
        android:gravity="center"
        android:text="@string/choose_site" />

</RelativeLayout>