<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_bar"
        android:background="@color/primary"/>

    <ImageView
        android:id="@+id/fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool"
        android:layout_marginTop="@dimen/pad_132"
        android:layout_centerHorizontal="true"
        android:src="@drawable/fill" />

    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/st_title"
        android:layout_below="@+id/fill"
        android:layout_marginTop="@dimen/pad_28"
        android:layout_marginLeft="@dimen/pad_25"
        android:layout_marginRight="@dimen/pad_25"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/send_com"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/st_14_text"
        android:layout_below="@+id/thanks"
        android:gravity="center"
        android:layout_marginTop="@dimen/pad_28"
        android:layout_marginLeft="@dimen/pad_25"
        android:layout_marginRight="@dimen/pad_25"
        android:layout_centerHorizontal="true"
        android:lineSpacingExtra="4sp"
        android:text="@string/appreciate_attention"/>

    <TextView
        android:id="@+id/apply"
        style="@style/st_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/pad_25"
        android:layout_marginLeft="@dimen/pad_25"
        android:layout_marginRight="@dimen/pad_25"
        android:layout_marginTop="@dimen/pad_5"
        android:background="@color/text"
        android:gravity="center"
        android:text="@string/contin" />

</RelativeLayout>