<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_bar"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/pad_20"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/comment"
            android:textColor="@color/white"
            android:textSize="@dimen/pad_18" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/panel_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool"
        android:layout_above="@+id/apply"
        android:layout_marginLeft="@dimen/pad_25"
        android:layout_marginTop="@dimen/pad_25"
        android:layout_marginRight="@dimen/pad_25"
        android:orientation="vertical">

        <com.dpcsa.compon.custom_components.ComponEditText
            android:id="@+id/comment"
            style="@style/st_14_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:maxLength="300"
            android:hint="@string/write_smth_here"
            android:inputType="textCapSentences|textMultiLine"
            android:lineSpacingExtra="4sp"
            android:theme="@style/styleEditText"
            app:minLength="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/apply"
        style="@style/st_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/pad_25"
        android:layout_marginLeft="@dimen/pad_25"
        android:layout_marginRight="@dimen/pad_25"
        android:layout_marginTop="@dimen/pad_5"
        android:background="@drawable/selector_button"
        android:gravity="center"
        android:text="@string/add_com" />
</RelativeLayout>